--- a/CSS 2.0.html
+++ b/CSS 2.0.html
@@ -293,7 +293,7 @@
 </div>
 
 
-<div class="rights-col">
+<!--div class="rights-col">
 <h1>Contact Us 24*7</h1>
 <div class="border"></div><br>
 <b><p>Enter your Email to Get our news and updates.</p></b><br>
@@ -302,7 +302,7 @@
 <input type="submit" name="" class="btn" value="submit" name="">
 </form>
 
-</div>
+</div-->
 </div>
 </footer>
 </div></div>
