--- a/CSS 2.0.html
+++ b/CSS 2.0.html
@@ -26,6 +26,7 @@
 </ul></b>
 </header><br><br><br><br><br>
 
+
 <div class="myDiv loading">
 <u><h2>Total Score</h2></u>
 <b><p>103.5</p></b>
@@ -186,7 +187,7 @@
 <i class="material-icons">person</i>&nbsp;&nbsp;Class Rank 3 </div>
 </div></div><br>
  
-<div>
+<div style="margin-top: 50px;">
 
   <div class="StudentPerformance"> 
     <center>
