--- a/CSS 2.0.html
+++ b/CSS 2.0.html
@@ -84,7 +84,7 @@
     <tr>
       <td>1</td>
       <td>Task</td>
-      <td class="active-row">CSS Task #2</td>
+      <td><h4 class="active-row"><b>CSS Task #2</b></h5><br><small>Conent 5/5 Language 4.5/5 Examples 4.5/5</small></td>
       <td> -- </td>
       <td>0</td>
       <td>0</td>
@@ -93,7 +93,7 @@
     <tr>
       <td>2</td>
       <td>Task</td>
-      <td class="active-row">CSS Task #1</td>
+      <td><h5 class="active-row">CSS Task #1</p></td>
       <td> -- </td>
       <td>0</td>
       <td>0</td>
@@ -102,7 +102,7 @@
     <tr>
       <td>3</td>
       <td>Task</td>
-      <td>Write a blog on How does Internet Work ?</td>
+      <td class="active-row">Write a blog on How does Internet Work ?</td>
       <td>30th Jun</td>
       <td>0</td>
       <td>14</td>
@@ -111,7 +111,7 @@
     <tr>
      <td>5</td>
       <td>Task</td>
-      <td>HTML Task #2</td>
+      <td class="active-row">HTML Task #2</td>
       <td>30th Jun</td>
       <td>0</td>
       <td>9.5</td>
@@ -120,7 +120,7 @@
     <tr class="active-row">
       <td>6</td>
       <td>Task</td>
-      <td>Build a brain game using scratch Hackathon`#1</td>
+      <td class="active-row"><b><strong>Build a brain game using scratch Hackathon`#1</strong><b></td>
       <td>29th Jun</td>
       <td>0</td>
       <td>23</td>
@@ -129,7 +129,7 @@
     <tr>
      <td>7</td>
       <td>Task</td>
-      <td>Build a Resume using HTML</td>
+      <td class="active-row">Build a Resume using HTML</td>
       <td>27th Jun</td>
       <td>0</td>
       <td>9.5</td>
@@ -138,7 +138,7 @@
     <tr>
       <td>8</td>
       <td>Task</td>
-      <td>Build a portfolio website</td>
+      <td class="active-row">Build a portfolio website</td>
       <td>19th Jun</td>
       <td>0</td>
       <td>12</td>
@@ -147,7 +147,7 @@
     <tr>
      <td>9</td>
       <td>Task</td>
-      <td>Online Resume</td>
+      <td class="active-row">Online Resume</td>
       <td>17th Jun</td>
       <td>0</td>
       <td>18</td>
@@ -156,7 +156,7 @@
     <tr>
       <td>10</td>
       <td>Task</td>
-      <td>Github profile creation</td>
+      <td class="active-row">Github profile creation</td>
       <td>12th Jun</td>
       <td>0</td>
       <td>8.5</td>
@@ -165,7 +165,7 @@
     <tr>
       <td>11</td>
       <td>Task</td>
-      <td>Linkedin profile create/update</td>
+      <td class="active-row">Linkedin profile create/update</td>
       <td>9th Jun</td>
       <td>0</td>
       <td>9</td>
