--- a/CSS 2.0.html
+++ b/CSS 2.0.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>CSS2</title>
+<title>CampusX Dashboard</title>
 <meta charset="utf-8">
 <meta name="description" content="Dashboard">
 <meta name="keywords" content="CampusX Dashboard">
@@ -84,7 +84,7 @@
     <tr>
       <td>1</td>
       <td>Task</td>
-      <td><h4 class="active-row"><b>CSS Task #2</b></h5><br><small>Conent 5/5 Language 4.5/5 Examples 4.5/5</small></td>
+      <td><h4 class="active-row"><b>CSS Task #2</b></h4><br><h6> -------- </h6></td>
       <td> -- </td>
       <td>0</td>
       <td>0</td>
@@ -93,7 +93,7 @@
     <tr>
       <td>2</td>
       <td>Task</td>
-      <td><h5 class="active-row">CSS Task #1</p></td>
+      <td><h4 class="active-row">CSS Task #1</h4></p> ------- </td>
       <td> -- </td>
       <td>0</td>
       <td>0</td>
@@ -102,7 +102,7 @@
     <tr>
       <td>3</td>
       <td>Task</td>
-      <td class="active-row">Write a blog on How does Internet Work ?</td>
+      <td><h4 class="active-row">Write a blog on How does Internet Work ?</h4><br><h6>Conent 5/5 Language 4.5/5 Examples</h6> </td>
       <td>30th Jun</td>
       <td>0</td>
       <td>14</td>
@@ -111,7 +111,7 @@
     <tr>
      <td>5</td>
       <td>Task</td>
-      <td class="active-row">HTML Task #2</td>
+      <td><h4 class="active-row">HTML Task #2</h4><br><h6>Great work</h6></td>
       <td>30th Jun</td>
       <td>0</td>
       <td>9.5</td>
@@ -120,7 +120,7 @@
     <tr class="active-row">
       <td>6</td>
       <td>Task</td>
-      <td class="active-row"><b><strong>Build a brain game using scratch Hackathon`#1</strong><b></td>
+      <td><h4 class="active-row"><b><strong>Build a brain game using scratch Hackathon`#1</strong></b></h4><br><h6>Gameplay - 10/10 Game Design - 10/10 True to problem statement - 3/5</h6></td>
       <td>29th Jun</td>
       <td>0</td>
       <td>23</td>
@@ -129,7 +129,7 @@
     <tr>
      <td>7</td>
       <td>Task</td>
-      <td class="active-row">Build a Resume using HTML</td>
+      <td><h4 class="active-row">Build a Resume using HTML</h4><br><h6>Nice</h6></td>
       <td>27th Jun</td>
       <td>0</td>
       <td>9.5</td>
@@ -138,7 +138,7 @@
     <tr>
       <td>8</td>
       <td>Task</td>
-      <td class="active-row">Build a portfolio website</td>
+      <td><h4 class="active-row">Build a portfolio website</h4><br><h6>Design thoda consistent rakho sare pages me ranjan</h6></td>
       <td>19th Jun</td>
       <td>0</td>
       <td>12</td>
@@ -147,7 +147,7 @@
     <tr>
      <td>9</td>
       <td>Task</td>
-      <td class="active-row">Online Resume</td>
+      <td><h5 class="active-row">Online Resume</h5><br><h6>Bahot sahi hai resume Bas 2 points 1. Try to fit everything in 1 page 2. Thoda design improve kar sakte ho</h6></td>
       <td>17th Jun</td>
       <td>0</td>
       <td>18</td>
@@ -156,7 +156,7 @@
     <tr>
       <td>10</td>
       <td>Task</td>
-      <td class="active-row">Github profile creation</td>
+      <td><h4 class="active-row">Github profile creation</h4><br><h6>Ranjan, thoda descibe karo readme me</h6></td>
       <td>12th Jun</td>
       <td>0</td>
       <td>8.5</td>
@@ -165,7 +165,7 @@
     <tr>
       <td>11</td>
       <td>Task</td>
-      <td class="active-row">Linkedin profile create/update</td>
+      <td><h4 class="active-row">Linkedin profile create/update</h4><br><h6>Few pointers from my side 1. Add a good cover letter 2. Add 'Aspiring Web Developer' in your title 3. Good about me</h6></td>
       <td>9th Jun</td>
       <td>0</td>
       <td>9</td>
