--- a/CSS 2.0.html
+++ b/CSS 2.0.html
@@ -48,11 +48,11 @@
 </div><br>
 
 
-<div style="margin-left: 7%; margin-right: 5%; width: 100%">
+<div id="structure">
 
 
 
-<div style="width: 100%;margin-top: 100px;">
+<div id="parameter">
 <div class="radio">
 <input class="radio_input" type="radio" value="option1" name="myRadio" id="myRadio1">
 <label class="radio_label" for="myRadio1">Pending Tasks</label>
@@ -84,7 +84,7 @@
     <tr>
       <td>1</td>
       <td>Task</td>
-      <td><h4 class="active-row"><b>CSS Task #2</b></h4><br><h6> -------- </h6></td>
+      <td><h4 class="active-row"><b>CSS Task #2</b></h4><br><h6><i> -  -  -  -  -  -  -  - </i></h6></td>
       <td> -- </td>
       <td>0</td>
       <td>0</td>
@@ -93,7 +93,7 @@
     <tr>
       <td>2</td>
       <td>Task</td>
-      <td><h4 class="active-row">CSS Task #1</h4></p> ------- </td>
+      <td><h4 class="active-row">CSS Task #1</h4></p><i> -  -  -  -  -  -  - </i></td>
       <td> -- </td>
       <td>0</td>
       <td>0</td>
@@ -102,7 +102,7 @@
     <tr>
       <td>3</td>
       <td>Task</td>
-      <td><h4 class="active-row">Write a blog on How does Internet Work ?</h4><br><h6>Conent 5/5 Language 4.5/5 Examples</h6> </td>
+      <td><h4 class="active-row">Write a blog on How does Internet Work ?</h4><br><h6><i>Conent 5/5 Language 4.5/5 Examples</i></h6></td>
       <td>30th Jun</td>
       <td>0</td>
       <td>14</td>
@@ -111,7 +111,7 @@
     <tr>
      <td>5</td>
       <td>Task</td>
-      <td><h4 class="active-row">HTML Task #2</h4><br><h6>Great work</h6></td>
+      <td><h4 class="active-row">HTML Task #2</h4><br><h6><i>Great work</i></h6></td>
       <td>30th Jun</td>
       <td>0</td>
       <td>9.5</td>
@@ -120,7 +120,7 @@
     <tr class="active-row">
       <td>6</td>
       <td>Task</td>
-      <td><h4 class="active-row"><b><strong>Build a brain game using scratch Hackathon`#1</strong></b></h4><br><h6>Gameplay - 10/10 Game Design - 10/10 True to problem statement - 3/5</h6></td>
+      <td><h4 class="active-row"><b><strong>Build a brain game using scratch Hackathon`#1</strong></b></h4><br><h6><i>Gameplay - 10/10 Game Design - 10/10 True to problem statement - 3/5</i></h6></td>
       <td>29th Jun</td>
       <td>0</td>
       <td>23</td>
@@ -129,7 +129,7 @@
     <tr>
      <td>7</td>
       <td>Task</td>
-      <td><h4 class="active-row">Build a Resume using HTML</h4><br><h6>Nice</h6></td>
+      <td><h4 class="active-row">Build a Resume using HTML</h4><br><h6><i>Nice</i></h6></td>
       <td>27th Jun</td>
       <td>0</td>
       <td>9.5</td>
@@ -138,7 +138,7 @@
     <tr>
       <td>8</td>
       <td>Task</td>
-      <td><h4 class="active-row">Build a portfolio website</h4><br><h6>Design thoda consistent rakho sare pages me ranjan</h6></td>
+      <td><h4 class="active-row">Build a portfolio website</h4><br><h6><i>Design thoda consistent rakho sare pages me ranjan</i></h6></td>
       <td>19th Jun</td>
       <td>0</td>
       <td>12</td>
@@ -147,7 +147,7 @@
     <tr>
      <td>9</td>
       <td>Task</td>
-      <td><h5 class="active-row">Online Resume</h5><br><h6>Bahot sahi hai resume Bas 2 points 1. Try to fit everything in 1 page 2. Thoda design improve kar sakte ho</h6></td>
+      <td><h5 class="active-row">Online Resume</h5><br><h6><i>Bahot sahi hai resume Bas 2 points 1. Try to fit everything in 1 page 2. Thoda design improve kar sakte ho</i></h6></td>
       <td>17th Jun</td>
       <td>0</td>
       <td>18</td>
@@ -156,7 +156,7 @@
     <tr>
       <td>10</td>
       <td>Task</td>
-      <td><h4 class="active-row">Github profile creation</h4><br><h6>Ranjan, thoda descibe karo readme me</h6></td>
+      <td><h4 class="active-row">Github profile creation</h4><br><h6><i>Ranjan, thoda descibe karo readme me</i></h6></td>
       <td>12th Jun</td>
       <td>0</td>
       <td>8.5</td>
@@ -165,7 +165,7 @@
     <tr>
       <td>11</td>
       <td>Task</td>
-      <td><h4 class="active-row">Linkedin profile create/update</h4><br><h6>Few pointers from my side 1. Add a good cover letter 2. Add 'Aspiring Web Developer' in your title 3. Good about me</h6></td>
+      <td><h4 class="active-row">Linkedin profile create/update</h4><br><h6><i>Few pointers from my side 1. Add a good cover letter 2. Add 'Aspiring Web Developer' in your title 3. Good about me</i></h6></td>
       <td>9th Jun</td>
       <td>0</td>
       <td>9</td>
@@ -178,26 +178,26 @@
 <br><br><br><br>
 <!--Profile-->
 
-<div style="float: left;width: 90%">
+<div id="profile_view">
 <div class="profile">
 <img src="https://avatars0.githubusercontent.com/u/65014749?s=460&u=bda31c776046b57277621d5cef4fc2e1d41a2127&v=4" alt="Profile Image" class="profile_image">
-<div class="profile_name">Ranjan Das</div>
-<div class="profile_title">Student at CampusX</div>
+<div class="profile_name"><b>Ranjan Das</b></div>
+<div class="profile_title"><b>Student at CampusX</b></div>
 <div class="profile_detail">
-<i class="material-icons">person</i>&nbsp;&nbsp;Class Rank 3 </div>
+<i class="material-icons">person</i>&nbsp;&nbsp;<b>Class Rank 3 </b></div>
 </div></div><br>
  
 <div style="margin-top: 50px;">
 
   <div class="StudentPerformance"> 
     <center>
-      <img src="https://github.com/Ranjan-Das-cloud/CSS_Repo_2/blob/master/Images/Performance_Graph.png?raw=true" alt="" style="width: 100%;"></center>
+      <img src="https://github.com/Ranjan-Das-cloud/CSS_Repo_2/blob/master/Images/Performance_Graph.png?raw=true" id="image_view"></center>
   </div>
 
 
 <div class="leaderboard">
-  <div style="margin: auto">
-  <h3>Leaderboard</h3>
+  <div id="hfhfhf">
+  <h3><b>Leaderboard</b></h3>
 </div>
 <table class="content-table">
   <thead>
@@ -307,6 +307,34 @@
 </div>
 </footer>
 </div></div>
+
+<div>
+  <!-- nav bar-->
+<nav class="nav">
+  <a href="#" class="nav__link"> 
+    <i class="material-icons nav__icon">person</i>
+    <span class="nav__text">My Profile</span>
+  </a>
+  <a href="#" class="nav__link nav__link--active">
+    <i class="material-icons nav__icon">dashboard</i>
+    <span class="nav__text">Dashboard</span>
+  </a>
+  <a href="#" class="nav__link">
+    <i class="material-icons nav__icon">devices</i>
+    <span class="nav__text">My Class</span>
+  </a>
+  <a href="#" class="nav__link">
+    <i class="material-icons nav__icon">book</i>
+    <span class="nav__text">My Courses</span>
+  </a>
+  <a href="#" class="nav__link">
+    <i class="material-icons nav__icon">settings</i>
+    <span class="nav__text">Logout</span>
+  </a>
+</nav>
+<!--end-->
+
+</div>
 
 </body>
 </html>
