--- a/CSS 2.0.html
+++ b/CSS 2.0.html
@@ -84,7 +84,7 @@
     <tr>
       <td>1</td>
       <td>Task</td>
-      <td><h4 class="active-row"><b>CSS Task #2</b></h4><br><h6><i> -  -  -  -  -  -  -  - </i></h6></td>
+      <td><h4 class="active-row"><b>CSS Task #2</b></h4><i> -  -  -  -  -  -  -  - </i></td>
       <td> -- </td>
       <td>0</td>
       <td>0</td>
@@ -93,7 +93,7 @@
     <tr>
       <td>2</td>
       <td>Task</td>
-      <td><h4 class="active-row">CSS Task #1</h4></p><i> -  -  -  -  -  -  - </i></td>
+      <td><h4 class="active-row">CSS Task #1</h4><i> -  -  -  -  -  -  - </i></td>
       <td> -- </td>
       <td>0</td>
       <td>0</td>
@@ -102,7 +102,7 @@
     <tr>
       <td>3</td>
       <td>Task</td>
-      <td><h4 class="active-row">Write a blog on How does Internet Work ?</h4><br><h6><i>Conent 5/5 Language 4.5/5 Examples</i></h6></td>
+      <td><h4 class="active-row">Write a blog on How does Internet Work ?</h4><br><small><i>Conent 5/5 Language 4.5/5 Examples</i></small></td>
       <td>30th Jun</td>
       <td>0</td>
       <td>14</td>
@@ -111,7 +111,7 @@
     <tr>
      <td>5</td>
       <td>Task</td>
-      <td><h4 class="active-row">HTML Task #2</h4><br><h6><i>Great work</i></h6></td>
+      <td><h4 class="active-row">HTML Task #2</h4><br><small><i>Great work</i></small></td>
       <td>30th Jun</td>
       <td>0</td>
       <td>9.5</td>
@@ -120,7 +120,7 @@
     <tr class="active-row">
       <td>6</td>
       <td>Task</td>
-      <td><h4 class="active-row"><b><strong>Build a brain game using scratch Hackathon`#1</strong></b></h4><br><h6><i>Gameplay - 10/10 Game Design - 10/10 True to problem statement - 3/5</i></h6></td>
+      <td><h4 class="active-row"><b><strong>Build a brain game using scratch Hackathon`#1</strong></b></h4><br><h5><b><i>Gameplay - 10/10 Game Design - 10/10 True to problem statement - 3/5</i></b></h5></td>
       <td>29th Jun</td>
       <td>0</td>
       <td>23</td>
@@ -129,16 +129,16 @@
     <tr>
      <td>7</td>
       <td>Task</td>
-      <td><h4 class="active-row">Build a Resume using HTML</h4><br><h6><i>Nice</i></h6></td>
+      <td><h4 class="active-row">Build a Resume using HTML</h4><br><small><i>Nice</i></small></td>
       <td>27th Jun</td>
       <td>0</td>
       <td>9.5</td>
-      <td>1</td>
+      <td>0</td>
     </tr>
     <tr>
       <td>8</td>
       <td>Task</td>
-      <td><h4 class="active-row">Build a portfolio website</h4><br><h6><i>Design thoda consistent rakho sare pages me ranjan</i></h6></td>
+      <td><h4 class="active-row">Build a portfolio website</h4><br><small><i>Design thoda consistent rakho sare pages me ranjan</i></small></td>
       <td>19th Jun</td>
       <td>0</td>
       <td>12</td>
@@ -147,7 +147,7 @@
     <tr>
      <td>9</td>
       <td>Task</td>
-      <td><h5 class="active-row">Online Resume</h5><br><h6><i>Bahot sahi hai resume Bas 2 points 1. Try to fit everything in 1 page 2. Thoda design improve kar sakte ho</i></h6></td>
+      <td><h5 class="active-row">Online Resume</h5><br><small><i>Bahot sahi hai resume Bas 2 points 1. Try to fit everything in 1 page 2. Thoda design improve kar sakte ho</i></small></td>
       <td>17th Jun</td>
       <td>0</td>
       <td>18</td>
@@ -156,7 +156,7 @@
     <tr>
       <td>10</td>
       <td>Task</td>
-      <td><h4 class="active-row">Github profile creation</h4><br><h6><i>Ranjan, thoda descibe karo readme me</i></h6></td>
+      <td><h4 class="active-row">Github profile creation</h4><br><small><i>Ranjan, thoda descibe karo readme me</i></small></td>
       <td>12th Jun</td>
       <td>0</td>
       <td>8.5</td>
@@ -165,7 +165,7 @@
     <tr>
       <td>11</td>
       <td>Task</td>
-      <td><h4 class="active-row">Linkedin profile create/update</h4><br><h6><i>Few pointers from my side 1. Add a good cover letter 2. Add 'Aspiring Web Developer' in your title 3. Good about me</i></h6></td>
+      <td><h4 class="active-row">Linkedin profile create/update</h4><br><small><i>Few pointers from my side 1. Add a good cover letter 2. Add 'Aspiring Web Developer' in your title 3. Good about me</i></small></td>
       <td>9th Jun</td>
       <td>0</td>
       <td>9</td>
@@ -308,9 +308,9 @@
 </footer>
 </div></div>
 
-<div>
+<div></div>
   <!-- nav bar-->
-<nav class="nav">
+<nav class="nav na40">
   <a href="#" class="nav__link"> 
     <i class="material-icons nav__icon">person</i>
     <span class="nav__text">My Profile</span>
@@ -334,7 +334,6 @@
 </nav>
 <!--end-->
 
-</div>
 
 </body>
 </html>
